# PyLangs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
langs/: __init__.py
pylangs/: __init__.py  _json.py  _lang.py  _langs.py
